--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "@commitlint/config-conventional": "^7.3.1",
     "@commitlint/travis-cli": "^7.4.0",
     "@oclif/tslint": "^3.1.1",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.0",
     "@types/react": "^16.8.3",
     "fast-check": "^1.10.0",
     "husky": "^1.3.1",
     "jest": "^24.0.0",
     "prettier": "^1.16.1",
-    "ts-jest": "^23.10.0-beta.6",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
